--- a/station/index.html
+++ b/station/index.html
@@ -47,6 +47,7 @@
 					<ul class="dropdown-menu" role="menu">
 						<li class="active" ui-sref-active="active"><a href ui-sref="start">Start</a></li>
 						<li ui-sref-active="active"><a href ui-sref="whitelist">Whitelist</a></li>
+						<li ui-sref-active="active"><a href ui-sref="update">Updates</a></li>
 						<li ui-sref-active="active" ng-if="loggedInUser.admin"><a href ui-sref="fields">Datenfelder</a></li>
 						<li ui-sref-active="active" ng-if="loggedInUser.admin"><a href ui-sref="users">Benutzerinnen</a></li>
 						<li role="presentation" class="divider"></li>
@@ -1401,26 +1402,26 @@
 			<p>Anzahl <span ng-bind="updates.length"></span></p>
 
 		</div>
-		<div class="col-md-5">
-			<div class="pull-right">
-				<label>Aktionen</label>
-
-				<div>
-					<button class="btn btn-default" ui-sref="person({id: 'new'})">Person anlegen</button>
-					<div class="btn-group">
-						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-							Daten anzeigen <span class="caret"></span>
-						</button>
-						<ul class="dropdown-menu" role="menu">
-							<li ng-repeat="o in fields" ng-class="{active:isFieldActive(o)}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-3">
-			<div ng-include="'partials/filter.html'"></div>
-		</div>
+		<!--<div class="col-md-5">-->
+			<!--<div class="pull-right">-->
+				<!--<label>Aktionen</label>-->
+<!---->
+				<!--<div>-->
+					<!--<button class="btn btn-default" ui-sref="person({id: 'new'})">Person anlegen</button>-->
+					<!--<div class="btn-group">-->
+						<!--<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">-->
+							<!--Daten anzeigen <span class="caret"></span>-->
+						<!--</button>-->
+						<!--<ul class="dropdown-menu" role="menu">-->
+							<!--<li ng-repeat="o in fields" ng-class="{active:isFieldActive(o)}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>-->
+						<!--</ul>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--<div class="col-md-3">-->
+			<!--<div ng-include="'partials/filter.html'"></div>-->
+		<!--</div>-->
 	</div>
 
 	<div class="update">
@@ -1539,7 +1540,6 @@
 	</div>
 
 </script>
-
 
 </body>
 </html>
