--- a/station/index.html
+++ b/station/index.html
@@ -1145,6 +1145,10 @@
 					<label>Format</label>
 					<select class="form-control" ng-model="d.value.fmt" ng-options="f.fmt as f.name for f in dtp_formats"></select>
 				</div>
+				<div class="form-group col-md-12">
+					<label>Beschreibung</label>
+					<input type="text" class="form-control" placeholder="Text" ng-model="d.value.desc">
+				</div>
 			</form>
 		</div>
 
